# agentic-esports-tycoon

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/game/: README.md
config/: README.md  derivation.yaml  entity_resolution.yaml  graph_export.yaml  patch_eras.yaml  relationships.yaml  scheduler.yaml  validation.yaml
data/: README.md  attributes.yaml
data/agents/: cypher.yaml  jett.yaml  omen.yaml  sage.yaml  sova.yaml
data/maps/: ascent.yaml  bind.yaml  haven.yaml
data/weapons/: classic.yaml  operator.yaml  phantom.yaml  sheriff.yaml  vandal.yaml
docs/: ARCHITECTURE.md
docs/adr/: ADR-006-storage-stack.md
docs/design/: observation-action-space.md  tycoon-obs-action-space.md  tycoon-state-factorisation.md  world-model-state.md
docs/setup/: api-and-hardware-checklist.md
schemas/config/: README.md  agent.schema.yaml  example.run.yaml  run.schema.yaml  sim.schema.yaml
schemas/game/: README.md  match.schema.yaml  player.schema.yaml  sponsor.schema.yaml  team.schema.yaml  tournament.schema.yaml
services/data_pipeline/: pyproject.toml
services/data_pipeline/src/data_pipeline/: __init__.py  connector.py  errors.py  patch_notes_runner.py  rate_limiter.py  runner.py
services/data_pipeline/src/data_pipeline/connectors/: liquipedia.py  playvalorant.py  riot.py  vlr.py  vlr_match.py
services/data_pipeline/src/data_pipeline/seeds/: __init__.py  __main__.py  liquipedia.py  patch_eras.py  relationships.py  vlr.py
services/data_pipeline/src/data_pipeline/transcribe/: __init__.py  cli.py  engine.py  worker.py
services/data_pipeline/tests/: conftest.py  pipeline_fixtures.py  test_connector_contract.py  test_liquipedia_connector.py  test_liquipedia_seed.py  test_patch_eras_seed.py  test_patch_notes_runner.py  test_playvalorant_connector.py  test_rate_limiter.py  test_relationship_bootstrap.py  test_riot_connector.py  test_runner.py  test_transcribe_engine.py  test_transcribe_worker.py  test_vlr_connector.py  test_vlr_match_scraper.py  test_vlr_seed.py
services/data_pipeline/tests/fixtures/liquipedia/: coach.json  coaches_discovery.json  player.json  player_with_socials.json  player_zekken.json  players_discovery_page1.json  players_discovery_page2.json  team.json  team_rebrand.json  team_with_socials.json  teams_discovery.json  tournaments.json  transfers.json
services/data_pipeline/tests/fixtures/playvalorant/: article_8_05.html  article_no_version.html  list_page_1.html
services/data_pipeline/tests/fixtures/riot/: match.json  matchlist.json
services/data_pipeline/tests/fixtures/vlr/: match_300001.html  matches.html  rankings.html  robots.txt  stats.html  stats_renamed_tenz.html
services/ecosystem/: pyproject.toml
services/ecosystem/src/ecosystem/: __init__.py
services/ecosystem/src/ecosystem/graph/: __init__.py  builder.py  export.py  normalize.py  schema.py  snapshot.py  source.py  validate.py
services/ecosystem/src/ecosystem/relationships/: __init__.py  decay.py
services/ecosystem/tests/: conftest.py  graph_fixtures.py  test_graph_builder.py  test_graph_export.py  test_graph_normalize.py  test_graph_schema.py  test_relationship_decay.py
services/match_wm/: pyproject.toml
services/match_wm/src/match_wm/: __init__.py
src/aet/rng/: __init__.py
tests/: test_events.py  test_rng_tree.py
