[project]
name = "agentic-esports-tycoon"
version = "0.0.1"
description = "Monorepo root: agentic esports tycoon simulation."
requires-python = ">=3.12,<3.13"
readme = "README.md"
dependencies = [
    "esports-sim-shared",
    "data-pipeline",
    "ecosystem",
    "match-wm",
]

[tool.uv.workspace]
members = ["packages/*", "services/*"]

[tool.uv.sources]
esports-sim-shared = { workspace = true }
data-pipeline = { workspace = true }
ecosystem = { workspace = true }
match-wm = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-picked>=0.5",
    # Per-test timeout so a hanging test surfaces as a fail-with-traceback
    # instead of stalling CI for the full 6-hour job budget. Limit set
    # in ``addopts`` below; integration tests can override per-test
    # via ``@pytest.mark.timeout(...)`` if a legitimately slow path
    # ever needs more headroom.
    "pytest-timeout>=2.3",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-PyYAML",
]

[tool.pytest.ini_options]
testpaths = [
    "packages/shared/tests",
    "services/data_pipeline/tests",
    "services/ecosystem/tests",
    "services/match_wm/tests",
]
# ``--import-mode=importlib`` lets pytest collect from multiple ``tests/``
# directories — one per workspace member — without colliding on the shared
# module name. Without it, the second ``conftest.py`` import raises
# ImportPathMismatchError because two paths resolve to ``tests.conftest``.
addopts = "-ra --import-mode=importlib --timeout=300"
markers = [
    "integration: requires a running Postgres (TEST_DATABASE_URL set). Skipped by default on a fresh clone.",
]

# --- Coverage -----------------------------------------------------------------
# ``make coverage`` and ``make ci`` enable --cov via the per-target overrides;
# the defaults here keep the data clean (parallel-safe, branches counted) and
# tell coverage where production code lives so reports are scoped to it.

[tool.coverage.run]
branch = true
parallel = true
source = [
    "packages/shared/src",
    "services/data_pipeline/src",
    "services/ecosystem/src",
    "services/match_wm/src",
]
omit = [
    # Test code itself is not interesting in the report; tests/ contains
    # support fixtures and stubs whose execution is incidental.
    "*/tests/*",
    # Alembic auto-generated migration scripts: production code, but
    # exercised by ``alembic upgrade``, not by pytest. Including them
    # would push the headline number down without a useful signal.
    "*/alembic/versions/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
# Lines tagged ``# pragma: no cover`` are excluded; add a couple of
# repo-wide patterns for the same intent without the magic comment.
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# --- Tooling configuration shared by every workspace member -------------------

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
# Type-check production code only. Tests run under pytest; type purity inside
# tests buys little and produces a lot of `-> None` noise.
files = [
    "packages/shared/src",
    "services/data_pipeline/src",
    "services/ecosystem/src",
    "services/match_wm/src",
]
explicit_package_bases = true
mypy_path = [
    "packages/shared/src",
    "services/data_pipeline/src",
    "services/ecosystem/src",
    "services/match_wm/src",
]

[[tool.mypy.overrides]]
module = ["numpy", "numpy.*"]
ignore_missing_imports = true

# torch / torch_geometric are *optional* — the graph exporter
# (BUF-53) imports them lazily inside ``GraphSnapshot.to_pyg`` so a
# downstream trainer can opt into PyG without forcing every CI job to
# install the heavy stack. Tell mypy not to fail on the missing stubs.
[[tool.mypy.overrides]]
module = ["torch", "torch.*", "torch_geometric", "torch_geometric.*"]
ignore_missing_imports = true

# ``sentence_transformers`` is the BUF-28 default embedder. Same
# rationale as torch above — pulling it into CI would mean shipping
# torch + huggingface; the embedder is lazy-imported inside
# ``SentenceTransformerEmbedder.embed`` so the rest of the codebase
# (and the test suite, which injects a stub Embedder) doesn't depend
# on it.
[[tool.mypy.overrides]]
module = ["sentence_transformers", "sentence_transformers.*"]
ignore_missing_imports = true

# pgvector ships without a ``py.typed`` marker today, so mypy's strict
# mode treats every import as ``Any``. The schema-side pgvector usage
# (``Vector(384)`` columns) is narrow enough that suppressing here is
# preferable to scattering ``# type: ignore`` across the model + queries.
[[tool.mypy.overrides]]
module = ["pgvector", "pgvector.*"]
ignore_missing_imports = true
