[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-pipeline"
version = "0.0.1"
description = "Valorant data ingest service (VLR / Riot / Liquipedia -> data/)."
requires-python = ">=3.12,<3.13"
dependencies = [
    "esports-sim-shared",
    # Structured logging (BUF-9). Every ingestion line carries source +
    # content_hash so a faulty connector run can be reconstructed from logs
    # alone; structlog's processor pipeline keeps that contract testable.
    "structlog>=24.1",
    # HTTP client for the Riot API connector (BUF-82), Liquipedia (BUF-11),
    # and patch-notes (BUF-83) connectors. Imported lazily inside each
    # default ``http_get`` factory so unit tests that inject a fake never
    # need it on the path.
    "httpx>=0.27",
    # HTML parsing for the playvalorant.com patch-notes scraper (BUF-83).
    # ``beautifulsoup4`` is the de-facto choice for tag-structure extraction.
    "beautifulsoup4>=4.12",
]

[tool.uv.sources]
esports-sim-shared = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/data_pipeline"]
