[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-pipeline"
version = "0.0.1"
description = "Valorant data ingest service (VLR / Riot / Liquipedia -> data/)."
requires-python = ">=3.12,<3.13"
dependencies = [
    "esports-sim-shared",
    # Structured logging (BUF-9). Every ingestion line carries source +
    # content_hash so a faulty connector run can be reconstructed from logs
    # alone; structlog's processor pipeline keeps that contract testable.
    "structlog>=24.1",
    # HTTP client for the Riot API connector (BUF-82) and other future
    # API-backed scrapers. Imported lazily inside the default ``http_get``
    # factory so unit tests that inject a fake never need it on the path.
    "httpx>=0.27",
]

[tool.uv.sources]
esports-sim-shared = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/data_pipeline"]
