[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-pipeline"
version = "0.0.1"
description = "Valorant data ingest service (VLR / Riot -> data/)."
requires-python = ">=3.12,<3.13"
dependencies = [
    "esports-sim-shared",
    # Structured logging (BUF-9). Every ingestion line carries source +
    # content_hash so a faulty connector run can be reconstructed from logs
    # alone; structlog's processor pipeline keeps that contract testable.
    "structlog>=24.1",
    # HTTP client used by REST connectors (BUF-82 Riot, BUF-83 patch
    # notes). Connectors take ``http_get: Callable[[str], dict]`` so
    # unit tests can inject canned responses; the default factory
    # wires ``httpx`` so production callers don't have to.
    "httpx>=0.27",
    # HTML parsing for the playvalorant.com patch-notes scraper (BUF-83).
    # ``beautifulsoup4`` is the de-facto choice for tag-structure extraction.
    "beautifulsoup4>=4.12",
    # Headless browser for the BUF-10 VLR.gg connector. VLR pages are JS-
    # rendered, so a plain ``requests``-based scrape returns shells with
    # no stats data. The default factory in ``connectors.vlr`` wires
    # Playwright at runtime; tests inject a synchronous fake page-fetcher
    # and never import this dependency, so CI doesn't have to install
    # browser binaries.
    "playwright>=1.45",
]

[tool.uv.sources]
esports-sim-shared = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/data_pipeline"]
