[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ecosystem"
version = "0.0.1"
description = "Tycoon / management simulation service."
requires-python = ">=3.12,<3.13"
dependencies = [
    "esports-sim-shared",
]

[tool.uv.sources]
esports-sim-shared = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/ecosystem"]
