[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "match-wm"
version = "0.0.1"
description = "2D tactical match engine + neural world model."
requires-python = ">=3.12,<3.13"
dependencies = [
    "esports-sim-shared",
]

[tool.uv.sources]
esports-sim-shared = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/match_wm"]
